; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_ooblayout_free.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_ooblayout_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32 }
%struct.mtd_oob_region = type { i32, i32 }

@ERANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_info*, i32, %struct.mtd_oob_region*)* @ar934x_nfc_ooblayout_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar934x_nfc_ooblayout_free(%struct.mtd_info* %0, i32 %1, %struct.mtd_oob_region* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtd_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.mtd_oob_region*, align 8
  store %struct.mtd_info* %0, %struct.mtd_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.mtd_oob_region* %2, %struct.mtd_oob_region** %7, align 8
  %8 = load i32, i32* %6, align 4
  switch i32 %8, label %19 [
    i32 0, label %9
    i32 1, label %14
  ]

9:                                                ; preds = %3
  %10 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %11 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %10, i32 0, i32 0
  store i32 4, i32* %11, align 4
  %12 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %13 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %12, i32 0, i32 1
  store i32 16, i32* %13, align 4
  store i32 0, i32* %4, align 4
  br label %22

14:                                               ; preds = %3
  %15 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %16 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %15, i32 0, i32 0
  store i32 48, i32* %16, align 4
  %17 = load %struct.mtd_oob_region*, %struct.mtd_oob_region** %7, align 8
  %18 = getelementptr inbounds %struct.mtd_oob_region, %struct.mtd_oob_region* %17, i32 0, i32 1
  store i32 16, i32* %18, align 4
  store i32 0, i32* %4, align 4
  br label %22

19:                                               ; preds = %3
  %20 = load i32, i32* @ERANGE, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %19, %14, %9
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
